# Minion

./: .gitignore  AGENTS.md  PROCESS.md  README.md
.cursor/rules/: shipping-process.mdc
.github/workflows/: ci.yml  deploy-telemetry-collector.yml  mcp-python-tests.yml
agent/: query_memory.py  retrieval_policy.md
chatgpt_mcp_memory/: EXTENSIONS_AND_SCOPES.md  NEGATIVE_CAPABILITY.md  README.md  claude_desktop_config.example.json  requirements-all.txt  requirements-audio.txt  requirements-code.txt  requirements-dev.txt  requirements-docs.txt  requirements-images.txt  requirements-video.txt  requirements.txt  retrieval_policy.md
chatgpt_mcp_memory/docs/: process-hygiene.md
chatgpt_mcp_memory/scripts/: dev_ps_minion.sh
chatgpt_mcp_memory/src/: ambient_pipeline.py  ambient_session.py  ambient_vault.py  analytics_remote.py  api.py  ask_minion.py  build_brief.py  build_index.py  build_voice.py  consent.py  consent_policy.py  corpus_pins.py  corpus_pins_llm.py  diagnostics.py  embed_runtime.py  generate_core_profile.py  (+18 more)
demo_corpus/: 01-ops-brief.md  02-meeting-notes.txt  03-onboarding.md  README.md  questions.md
desktop/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.js  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ax_sample.rs  lib.rs  screen_context.rs
docs/: homebrew.md
eval/: conftest.py  golden_queries.yaml  run_eval.py  test_mcp_golden.py
scripts/: minion_test.py
telemetry-collector/: package-lock.json  package.json  wrangler.toml
(+44 files in other folders)
