[package]
name = "minion-desktop"
version = "1.0.2"
description = "Minion — private local memory and semantic search for AI assistants."
authors = ["Minion"]
edition = "2021"

[lib]
name = "minion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
active-win-pos-rs = "0.10"
accessibility = "0.2"
